# sequence-to-function

./: .gitignore  LICENSE  README.md  TASK.md  app.py  chat_ui.html  docker-compose.yml  manager.py  pyproject.toml  requirements.txt  visualisation.ipynb
api/stf/: router.py  runners.py  schemas.py
app_startup/: dependencies.py  lifespan.py  state.py
configs/: __init__.py  config.py  database.py  endpoints_base_models.py  types.py
data/: sequence_data.csv
notebooks/: agent_visualisation.ipynb
runner/: __init__.py  stream.py
stf_agents/: __init__.py  agents.py  article_parsing.py  article_writing.py  base.py  data_retrieval.py  manager.py  prompts.py  schemas.py  tools.py  vision.py
stf_agents/subagents/: vision_agent.py
testing_endpoints/: __init__.py  router.py
utils/: __init__.py  app_context.py  create_config.py  database_service.py  embeddings.py  postgres_utils.py  sqlite_utils.py  sse.py  start_up.py
